[metadata]
name = pytest-intercept-remote
url = https://github.com/devanshshukla99/pytest-intercept-remote
author = devanshshukla99
author_email = devanshshukla99@outlook.com
classifiers =
    Development Status :: 3 - Alpha
    Framework :: Pytest
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Testing
    Topic :: Utilities
license = BSD
description = Pytest plugin for intercepting outgoing connection requests during pytest run.
long_description = file: README.rst

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires =
    setuptools_scm
install_requires =
    pytest>=4.6
    requests>=2.25.1

[options.entry_points]
pytest11 =
    pytest_intercept_remote = pytest_intercept_remote.plugin

[options.packages.find]
exclude =
    tests

[flake8]
max-line-length = 110

[tool:pytest]
norecursedirs = ".tox" "*.egg-info" 
minversion = 4.6
testpaths = tests

[coverage:run]
omit =
    */__init__*
    */_version.py
    tests/*
    */conftest.py
    *setup*
